[package]
name = "feh"
version = "0.0.1"
authors = ["p1ck0 <baierilja@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "cli",
    "watcher"
]

[dependencies]
structopt = "0.3.13"
cli = { path = "../flns/cli"}
watcher = { path = "../flns/watcher"}

